# c2pa-bindings-v1

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  cbindgen.toml
.github/workflows/: ci.yml
src/: c2pa.udl  c2pa_lib.h  c2pa_uniffi.udl  c_api.rs  error.rs  ingredient_builder.rs  json_api.rs  lib.rs  main.c  manifest_builder.rs  manifest_store_reader.rs  response.rs  signer.rs  signer_info.rs  stream.rs  test_signer.rs  test_stream.rs
tests/: test.py  test_c2pa.py  training.py
tests/c/: c2pa.h  main.c
tests/nodejs/: package-lock.json  package.json  test.js
tests/python/: c2pa_api.py  test.py  unit_tests.py
