[package]
name = "c2pa-bindings"
version = "0.1.0"
authors = ["Gavin Peacock <gpeacock@adobe.com"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "uniffi_bindgen"
path = "src/bin/uniffi_bindgen.rs"

[dependencies]
c2pa = {version="0.20.0", features = ["file_io", "add_thumbnails", "fetch_remote_manifests"]}
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_with = "2.0.1"
thiserror = "1.0"
uniffi = "0.23.0"

[build-dependencies]
uniffi = { version = "0.23.0", features = [ "build", "cli"] }
