[package]
name = "c2pa-bindings"
version = "0.1.0"
authors = ["Gavin Peacock <gpeacock@adobe.com"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "uniffi_bindgen"
path = "src/bin/uniffi_bindgen.rs"

[dependencies]
c2pa = {version="0.28.3" , features = [ "add_thumbnails", "openssl_sign"]}
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_with = "2.0.1"
thiserror = "1.0"
uniffi = "0.24.3"
openssl = { version = "0.10.48", features = ["vendored"] }
openssl-sys = { version = "=0.9.92"}
pem = "3.0.2"

[build-dependencies]
uniffi = { version = "0.24.3", features = [ "build", "cli"] }

#[profile.release] 
#strip = true  # Automatically strip symbols from the binary. 
#pt-level = "z"  # Optimize for size. 
#lto = "thin" # Link time optimization.