[package]
name = "c2pa-bindings"
version = "0.1.0"
authors = ["Gavin Peacock <gpeacock@adobe.com"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "uniffi_bindgen"
path = "src/bin/uniffi_bindgen.rs"

[dependencies]
c2pa = {version="0.32.1" , features = [ "add_thumbnails", "openssl_sign"]}
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_with = "3.8.1"
thiserror = "1.0"
uniffi = "0.27.2"
openssl = { version = "0.10.48", features = ["vendored"] }
openssl-sys = { version = "0.9.102"}
pem = "3.0.2"

[build-dependencies]
uniffi = { version = "0.27.2", features = [ "build", "cli"] }

#[profile.release] 
#strip = true  # Automatically strip symbols from the binary. 
#pt-level = "z"  # Optimize for size. 
#lto = "thin" # Link time optimization.